added most icons for vehicle types; moved activities in their own subdirectory; created a unified way of implementing a station search (stationsearchbar); currently trying to migrate to androidx to support api 14

--- a/src/main/res/drawable/realtime_highlight.xml
+++ b/src/main/res/drawable/realtime_highlight.xml
@@ -14,8 +14,8 @@
                 android:startY="0"
                 android:type="linear" >
                 <item android:color="@color/transparent" android:offset="0" />
-                <item android:color="@color/backgroundSunken" android:offset="0.15" />
-                <item android:color="@color/backgroundSunken" android:offset="0.85" />
+                <item android:color="@color/backgroundHighlight" android:offset="0.15" />
+                <item android:color="@color/backgroundHighlight" android:offset="0.85" />
                 <item android:color="@color/transparent" android:offset="1" />
             </gradient>
         </aapt:attr>
