--- a/src/main/res/layout/comp_button_bookmark.xml
+++ b/src/main/res/layout/comp_button_bookmark.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/btnBookmarkItem"
     android:layout_width="match_parent"
-    android:layout_height="32dp"
-    android:background="@android:color/transparent"
-    app:fontFamily="@font/roboto"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="12dp"
+    android:layout_marginLeft="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginRight="12dp"
+    android:background="@color/transparent"
+    android:ellipsize="end"
     android:gravity="center_vertical"
+    android:maxLines="1"
+    android:minHeight="0dp"
+    android:paddingLeft="0dp"
     android:paddingTop="0dp"
+    android:paddingRight="4dp"
     android:paddingBottom="0dp"
     android:text="@string/appName"
-    android:textAllCaps="false"
+    android:textAppearance="@style/Theme.Echtzeyt.Button.Favorite"
     android:textColor="@color/foreground"
     android:textSize="16sp"
-    android:maxLines="1"
-    android:ellipsize="end"
-    app:backgroundTint="@android:color/transparent"
+    android:textStyle="bold"
+    app:backgroundTint="@null"
+    app:fontFamily="@font/roboto"
+    app:icon="@drawable/ic_arrow_right_v"
+    app:iconGravity="end"
+    app:iconPadding="0dp"
+    app:iconSize="14sp"
+    app:iconTint="@null"
     tools:ignore="TextContrastCheck">
 
-</Button>
+</com.google.android.material.button.MaterialButton>
