--- a/src/main/res/values/values.xml
+++ b/src/main/res/values/values.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_size">44dp</dimen>
-    <dimen name="button_radius">4dp</dimen>
+    <dimen name="button_radius">8dp</dimen>
     <dimen name="button_margin">10dp</dimen>
     <dimen name="button_padding">8dp</dimen>
+    <dimen name="button_padding_small">5sp</dimen>
+
+    <dimen name="stationsearch_text_size">20sp</dimen>
 
     <dimen name="toolbar_height">46dp</dimen>
     <dimen name="toolbar_radius">20dp</dimen>
@@ -39,7 +42,7 @@
     <dimen name="stationmarker_arrow_size">16dp</dimen>
     <dimen name="stationmarker_icon_padding">15dp</dimen>
     <dimen name="stationmarker_shadow_size">@dimen/stationmarker_arrow_size</dimen>
-    <drawable name="stationmarker_icon">@drawable/ic_bus</drawable>
+    <drawable name="stationmarker_icon">@drawable/ic_station</drawable>
 
     <dimen name="positionmarker_size">80dp</dimen>
 
